# VS_AvsReader

./: .gitignore  AvsReader.cpp  AvsReader.h  CMakeLists.txt  IDEA.md  README.md  build.zig  build.zig.zon  myvshelper.h  plugin.cpp  readme.txt
avsi/: README.md
docs/: avisynth-c-api-research.md  zig-rewrite-plan.md
src/: AvsReader.cpp  AvsReader.h  avs_capi.zig  avs_reader.zig  capi.cpp  capi.h  myvshelper.h  plugin.cpp  plugin.zig  plugin_entry.zig
tests/: demo_dogway_stdlib.vpy  diagnose_avsr.vpy  diagnose_filters.py  diagnose_filters_results.txt  diagnose_pixels.py  diagnose_pixels_results.txt  diagnose_stats.py  diagnose_stats_results.txt  fuzz_stdlib.py  preview_avsr.vpy  pyproject.toml  pytest_results.txt  test_external.py  test_plugin.py  test_stdlib.py
tests/results/: bugs.md  diagnose_filters.csv  diagnose_filters.md  diagnose_pixels.csv  diagnose_pixels.md  diagnose_stats.csv  diagnose_stats.md  fuzz.csv  fuzz.md  pytest_results.md
