[project]
name = "tests"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "polars",
    "vapoursynth>=77",
    "vapoursynth-bestsource",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv.sources]
vapoursynth-bestsource = { git = "https://github.com/vapoursynth/bestsource" }
